# infer-frame

./: .clang-format  .gitignore  .gitmodules  CHANGELOG_MULTI_WORKFLOW.md  CMakeLists.txt  README.md  TEST_CHECKLIST.md  build.sh
algorithm/yolov8/: CMakeLists.txt  yolov8_plugin.cc  yolov8_plugin.h  yolov8_plugin_c.cpp
cmake/: nndeploy_ascend_config.cmake  nndeploy_jetson_config.cmake  nndeploy_rknn_config.cmake  nndeploy_sophon_config.cmake
common/utils/: one_logger.hpp
docs/: WORKFLOW_QUICK_GUIDE.md  runV8V11_code_analysis.md
index/: index-软著.html
proto/: infer_service.proto
scripts/: color.sh  install_deps.sh
specs/design/: architecture.md
specs/requirements/: 001-backend-abstraction.md  002-plugin-system.md  003-grpc-interface.md  004-codec-module.md
specs/tasks/: phase-1-foundation.md
src/: main.cc
src/inference/: backend_factory.h  backend_interface.h  backend_registry.cc  backend_test.cc  yolov8_detect_demo.cc  yolov8_onnx_test.cc  yolov8_onnx_test_nndeploy.cc
src/inference/backends/: onnxruntime_backend.h  tensorrt_backend.h  tensorrt_backend.h.bak  tensorrt_backend.h.old
src/inference/base/: status.h  types.h
src/plugin/: algo_plugin_base.h  algo_plugin_interface.h  plugin_loader.h  plugin_loader_c.h  plugin_registry.h  plugin_test.cc  plugin_test_c.cc
